12 August 2005 Sylvain Pion
- Move Same_certainty from Uncertain.h.

9 August 2005 Sylvain Pion
- Fix workaround for enum_cast.

8 August 2005 Sylvain Pion
- functors : allow propagation of uncertainty.

7 August 2005 Sylvain Pion
- enum_cast : workaround for CGAL_CFG_MATCHING_BUG_5.

6 August 2005 Sylvain Pion
- Add enum_cast.
- sign_of_determinant.h : propagate uncertainty using Sgn<FT>::result_type
  instead of Sign.

5 August 2005 Sylvain Pion
- Move functional_base.h to STL_Extension.

5 August 2005 Sylvain Pion
- Fix #include ordering.

4 August 2005 Sylvain Pion
- Move Twotuple, Threetuple, Fourtuple, Sixtuple to STL_Extension.
- Remove unused New_delete_allocator.h .
- Move CGAL/known_bit_size_integers.h to Number_types.
- Move CGAL/memory.h to STL_Extension.
- Remove CGAL/utils.h.
- Merge src/aff_transformation_tags.C and src/Origin.C into src/kernel.C.
- Move assertions.[hC] to STL_Extension.
- Some #includes cleanups.
- Move CGAL/tags.h to STL_Extension.
- Move all config macros post-processing from basic.h to config.h.

1 August 2005 Sylvain Pion
- Remove CGAL/misc.h (provided convert(), to be replaced by NT_converter).

31 July 2005 Sylvain Pion
- Add missing include in last change.

30 July 2005 Sylvain Pion
- Add Vector_2::operator/(FT).

25 July 2005 Andreas Fabri
- doc : Fix Kernel_traits<T> which mentioned T::Kernel instead of T::R.

25 July 2005 Andreas Fabri
- Added qualified result type to Circle_2::compute_squared_radius

22 July 2005 Andreas Fabri
- Added Qualified_result_of<> for Circle_2.center()

20 July 2005 Andreas Fabri
- Added qualified_result_type

9 July 2005 Sylvain Pion
- Object : add object_cast<>() and .type().
- Doc : merge assign.tex and make_object.tex in Object.tex.

18 June 2005 Andreas Fabri
- Moved code from Kernel_class_2 to the functors

12 June 2005 Sylvain Pion
- Add function operator in Construct_{min|max}_vertex_[23] taking
  Segment_[23].

30 May 2005 Sylvain Pion